devel
-----

* Upgrade libunwind to v1.5.

* Added startup option `--javascript.tasks` to allow turning off JavaScript 
  tasks if not needed. The default value for this option is `true`, meaning 
  JavaScript tasks are available as before.
  However, with this option they can be turned off by admins to limit the 
  amount of JavaScript user code that is executed.

* Only instantiate a striped PRNG instance for the arangod server, but not 
  for any of the client tools (e.g. arangosh, arangodump, arangorestore). 
  The client tools do not use the striped PRNG, so we can save a few MBs of 
  memory for allocating the striped PRNG instance there, plus some CPU time 
  for initializing it. 

* Improve shard synchronization protocol by only transferring the required
  parts of the inventory from leader to follower. Previously, for each shard
  the entire inventory was exchanged, which included all shards of the
  respective database with all their details.
  In addition, save 3 cluster-internal requests per shard in the initial shard
  synchronization protocol by reusing already existing information in the
  different steps of the replication process.

* Added metric `arangodb_scheduler_low_prio_queue_last_dequeue_time` that 
  provides the time (in millseconds) it took for the most recent low priority 
  scheduler queue item to bubble up to the queue's head. This metric can be 
  used to estimate the queuing time for incoming requests. 
  The metric will be updated probabilistically when a request is pulled from 
  the scheduler queue, and may remain at its previous value for a while if 
  only few requests are coming in or remain permanently at its previous value 
  if no further requests are incoming at all.

* Allow {USER} placeholder string also in `--ldap.search-filter`.

* Fix agency restart with mismatching compation and log indexes.

* Added metrics for document read and write operations:
