@@ -67,6 +67,7 @@ class MetricsFeature final : public application_features::ApplicationFeature {
   explicit MetricsFeature(application_features::ApplicationServer& server);
 
   bool exportAPI() const;
+  bool exportReadWriteMetrics() const;
 
   void collectOptions(std::shared_ptr<options::ProgramOptions>) override final;
   void validateOptions(std::shared_ptr<options::ProgramOptions>) override final;
@@ -269,6 +270,7 @@ class MetricsFeature final : public application_features::ApplicationFeature {
   std::unique_ptr<ServerStatistics> _serverStatistics;
 
   bool _export;
+  bool _exportReadWriteMetrics;
 };
 
 }  // namespace arangodb
